# My-aws-serverless

./: .gitignore
async-command-poc/order-service/: .gitignore  README.md  compose.yml  package.json  pyproject.toml  serverless.yml
async-command-poc/order-service/src/: index.py
async-command-poc/order-service/src/config/: aws_ssm_config.py  env.py
async-command-poc/order-service/src/connector/: payment_connector.py  product_connector.py  retryable_http_error.py
async-command-poc/order-service/src/controller/: order_controller.py
async-command-poc/order-service/src/domain/: Base.py  base.py  custom_type.py  order.py  order_status.py
async-command-poc/order-service/src/exception/: domain_code.py  domain_error.py
async-command-poc/order-service/src/mapper/: generic_mapper.py
async-command-poc/order-service/src/processor/: validate_order_processor.py
async-command-poc/order-service/src/repository/: dynamodb_repository.py  order_repository.py
async-command-poc/order-service/src/service/: order_service.py  order_validation_service.py
async-command-poc/order-service/src/util/: json_util.py
async-command-poc/order-service/tests/: conftest.py  test_order.py
async-command-poc/order-service/tests/controller/: test_order_controller.py
async-command-poc/order-service/tests/repository/: test_dynamodb_repository.py  test_order_repository.py
async-command-poc/order-service/tests/service/: test_order_service.py  test_order_validation_service.py
async-command-poc/order-service/tests/util/: test_datetime_util.py  test_json_util.py  test_uuid_util.py
(+327 files in other folders)
