[tool.poetry]
name = "order-service"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
numpy-financial = "^1.0.0"
pydantic = "^2.9.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
pytest-env = "^1.1.5"
pytest-randomly = "^3.15.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
aws-lambda-powertools = "^3.2.0"
boto3 = "^1.35.47"
fastjsonschema = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
